# bert_tutorial

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
bert_tutorial/: bert_model.py  data_downloader.py  main.py  tokenize_example.py  yelp_dataset.py  yelp_transformer.py
tests/: test_bert_tutorial.py
