[tool.poetry]
name = "bert_tutorial"
version = "0.1.0"
description = ""
authors = ["ryoya ito <horusu.dqx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^2.9.1"
torch = "^1.5.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
